--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
   "dependencies": {
     "ai": "4.3.17",
     "clsx": "2.1.1",
-    "preact": "10.26.9",
+    "react": "19.1.0",
+    "react-dom": "19.1.0",
     "workers-ai-provider": "0.7.2"
   },
   "devDependencies": {
@@ -27,10 +28,10 @@
     "@eslint/compat": "1.3.1",
     "@eslint/eslintrc": "3.3.1",
     "@eslint/js": "9.30.1",
-    "@preact/preset-vite": "2.10.2",
     "@tailwindcss/postcss": "4.1.11",
-    "@typescript-eslint/eslint-plugin": "8.36.0",
-    "@typescript-eslint/parser": "8.36.0",
+    "@types/react": "19.1.8",
+    "@types/react-dom": "19.1.6",
+    "@vitejs/plugin-react-swc": "3.10.2",
     "eslint": "9.30.1",
     "eslint-plugin-prettier": "5.5.1",
     "eslint-plugin-simple-import-sort": "12.1.1",
@@ -44,6 +45,7 @@
     "prettier-plugin-tailwindcss": "0.6.14",
     "tailwindcss": "4.1.11",
     "typescript": "5.8.3",
+    "typescript-eslint": "8.36.0",
     "vite": "7.0.4",
     "wrangler": "4.24.3"
   }
